<resources>
    <string name="app_name">Emall</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen_texts">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s\, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_home">Home</string>
    <string name="title_pricetag">Pricetag</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_shoppingcart">Shopping Cart</string>
    <string name="User">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_man_class">Men Dress</string>
</resources>
